unpackaged/main/default/objects/FLHA__c/fields/Screw_Nuts_Bolts_Secured2__c.field-meta.xml
<CustomField>
    <fullName>Screw_Nuts_Bolts_Secured2__c</fullName>
    <label>Screw Nuts Bolts Secured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>