unpackaged/main/default/objects/FLHA__c/fields/Screw_Nuts_Bolts_Secured__c.field-meta.xml
<CustomField>
    <fullName>Screw_Nuts_Bolts_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screw Nuts Bolts Secured</label>
    <type>Checkbox</type>
</CustomField>