unpackaged/main/default/objects/FLHA__c/fields/Shoes_Slip_Bases_Secured2__c.field-meta.xml
<CustomField>
    <fullName>Shoes_Slip_Bases_Secured2__c</fullName>
    <label>Shoes Slip Bases Secured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>