unpackaged/main/default/objects/FLHA__c/fields/Shoes_Slip_Bases_Secured__c.field-meta.xml
<CustomField>
    <fullName>Shoes_Slip_Bases_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shoes Slip Bases Secured</label>
    <type>Checkbox</type>
</CustomField>