unpackaged/main/default/objects/FLHA__c/fields/SOW_Details__c.field-meta.xml
<CustomField>
    <fullName>SOW_Details__c</fullName>
    <label>SOW Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>