unpackaged/main/default/objects/FLHA__c/fields/Spreader_Bars_All_Rivets__c.field-meta.xml
<CustomField>
    <fullName>Spreader_Bars_All_Rivets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spreader Bars All Rivets</label>
    <type>Checkbox</type>
</CustomField>