unpackaged/main/default/objects/FLHA__c/fields/Spreader_Bars_Functional2__c.field-meta.xml
<CustomField>
    <fullName>Spreader_Bars_Functional2__c</fullName>
    <label>Spreader Bars Functional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>