unpackaged/main/default/objects/FLHA__c/fields/Spreader_Bars_Functional__c.field-meta.xml
<CustomField>
    <fullName>Spreader_Bars_Functional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spreader Bars Functional</label>
    <type>Checkbox</type>
</CustomField>