unpackaged/main/default/objects/FLHA__c/fields/SpreaderBarsDamageFree2__c.field-meta.xml
<CustomField>
    <fullName>SpreaderBarsDamageFree2__c</fullName>
    <label>Spreader Bars Damage Free</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>