unpackaged/main/default/objects/FLHA__c/fields/SpreaderBarsDamageFree__c.field-meta.xml
<CustomField>
    <fullName>SpreaderBarsDamageFree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spreader Bars Damage Free</label>
    <type>Checkbox</type>
</CustomField>