unpackaged/main/default/objects/FLHA__c/fields/Tasks_To_Be_Performed__c.field-meta.xml
<CustomField>
    <fullName>Tasks_To_Be_Performed__c</fullName>
    <label>Tasks To Be Performed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work at Heights - Ladders/Spurring</fullName>
            </value>
            <value>
                <fullName>Work at Heights - Elevated Platform</fullName>
            </value>
            <value>
                <fullName>Drilling /Cutting /Coring</fullName>
            </value>
            <value>
                <fullName>Fishing/Running Cable/Tape</fullName>
            </value>
            <value>
                <fullName>Fibre Termination /Splicing</fullName>
            </value>
            <value>
                <fullName>Working Around Equipment</fullName>
            </value>
            <value>
                <fullName>Heavy Lifting/ Awkward Positioning</fullName>
            </value>
            <value>
                <fullName>Customer Interaction /Education</fullName>
            </value>
            <value>
                <fullName>Working High Risk Area</fullName>
            </value>
            <value>
                <fullName>Access Customer Plant/Network Mapping</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Driving /Parking Vehicle</fullName>
                <isActive>false</isActive>
                <label>Driving /Parking Vehicle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>