unpackaged/main/default/objects/FLHA__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>FLHAs</relationshipLabel>
    <relationshipName>FLHAs</relationshipName>
    <type>Lookup</type>
</CustomField>