unpackaged/main/default/objects/FLHA__c/fields/ThirdParty_Ladder_Safe__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Ladder_Safe__c</fullName>
    <description>Is the Third- Party Ladder built to be safely used in the environment in which you are working. (No metal in Proximity to Live Electrical, A-frame for free standing use, Hooks for mid Span securement, if needed… ETC)?</description>
    <label>ThirdParty Ladder Safe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>