unpackaged/main/default/objects/FLHA__c/fields/ThirdParty_Ladder_Used__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Ladder_Used__c</fullName>
    <description>Will you be using a Third-Party Ladder on this job?</description>
    <label>ThirdParty Ladder Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>