unpackaged/main/default/objects/FLHA__c/fields/ThirdParty_Ladder_Used_Safely__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Ladder_Used_Safely__c</fullName>
    <description>Are all appropriate safety measures being employed during use of Third-Party ladder?</description>
    <label>ThirdParty Ladder Used Safely</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>