unpackaged/main/default/objects/FLHA__c/fields/Tools_In_Working_Order2__c.field-meta.xml
<CustomField>
    <fullName>Tools_In_Working_Order2__c</fullName>
    <label>Tools In Working Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>