unpackaged/main/default/objects/FLHA__c/fields/Tools_In_Working_Order__c.field-meta.xml
<CustomField>
    <fullName>Tools_In_Working_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tools In Working Order</label>
    <type>Checkbox</type>
</CustomField>