unpackaged/main/default/objects/FLHA__c/fields/Tools_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Tools_Inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tools Inspected</label>
    <type>Checkbox</type>
</CustomField>