unpackaged/main/default/objects/FLHA__c/fields/Vehicle_Secured2__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Secured2__c</fullName>
    <label>Vehicle Secured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>