unpackaged/main/default/objects/FLHA__c/fields/Vehicle_Secured__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Secured</label>
    <type>Checkbox</type>
</CustomField>