unpackaged/main/default/objects/FLHA__c/fields/Work_Area_Hazards_Controlled2__c.field-meta.xml
<CustomField>
    <fullName>Work_Area_Hazards_Controlled2__c</fullName>
    <label>Work Area Hazards Controlled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>