unpackaged/main/default/objects/FLHA__c/fields/Work_Area_Hazards_Controlled__c.field-meta.xml
<CustomField>
    <fullName>Work_Area_Hazards_Controlled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Area Hazards Controlled</label>
    <type>Checkbox</type>
</CustomField>