unpackaged/main/default/objects/FLHA__c/fields/ZZLadder_Controls_Files__c.field-meta.xml
<CustomField>
    <fullName>ZZLadder_Controls_Files__c</fullName>
    <label>ZZLadder Controls Files</label>
    <type>TextArea</type>
</CustomField>