unpackaged/main/default/objects/FLHA__c/fields/ZZLadder_Hazards_Files__c.field-meta.xml
<CustomField>
    <fullName>ZZLadder_Hazards_Files__c</fullName>
    <label>ZZLadder Hazards Files</label>
    <type>TextArea</type>
</CustomField>