unpackaged/main/default/objects/FLHA__c/fields/ZZOther_Controls__c.field-meta.xml
<CustomField>
    <fullName>ZZOther_Controls__c</fullName>
    <label>ZZOther Controls</label>
    <type>TextArea</type>
</CustomField>