unpackaged/main/default/objects/FLHA__c/fields/ZZOther_Controls_Files__c.field-meta.xml
<CustomField>
    <fullName>ZZOther_Controls_Files__c</fullName>
    <label>ZZOther Controls Files</label>
    <type>TextArea</type>
</CustomField>