unpackaged/main/default/objects/FLHA__c/fields/ZZOther_Hazards__c.field-meta.xml
<CustomField>
    <fullName>ZZOther_Hazards__c</fullName>
    <label>ZZOther Hazards</label>
    <type>TextArea</type>
</CustomField>