unpackaged/main/default/objects/FLHA__c/fields/ZZOther_Hazards_Files__c.field-meta.xml
<CustomField>
    <fullName>ZZOther_Hazards_Files__c</fullName>
    <label>ZZOther Hazards Files</label>
    <type>TextArea</type>
</CustomField>