unpackaged/main/default/objects/FLHA__c/fields/ZZPlatform_Controls_Files__c.field-meta.xml
<CustomField>
    <fullName>ZZPlatform_Controls_Files__c</fullName>
    <label>ZZPlatform Controls Files</label>
    <type>TextArea</type>
</CustomField>