unpackaged/main/default/objects/FLHA__c/fields/ZZPlatform_Hazards_Files__c.field-meta.xml
<CustomField>
    <fullName>ZZPlatform_Hazards_Files__c</fullName>
    <label>ZZPlatform Hazards Files</label>
    <type>TextArea</type>
</CustomField>