unpackaged/main/default/objects/FLHA__c/fields/ZZRunning_Cable_Controls__c.field-meta.xml
<CustomField>
    <fullName>ZZRunning_Cable_Controls__c</fullName>
    <label>ZZRunning Cable Controls</label>
    <type>TextArea</type>
</CustomField>