unpackaged/main/default/objects/FLHA__c/fields/ZZRunning_Cable_Controls_Files__c.field-meta.xml
<CustomField>
    <fullName>ZZRunning_Cable_Controls_Files__c</fullName>
    <label>ZZRunning Cable Controls Files</label>
    <type>TextArea</type>
</CustomField>