unpackaged/main/default/objects/FLHA__c/fields/ZZRunning_Cable_Hazards__c.field-meta.xml
<CustomField>
    <fullName>ZZRunning_Cable_Hazards__c</fullName>
    <label>ZZRunning Cable Hazards</label>
    <type>TextArea</type>
</CustomField>