unpackaged/main/default/objects/FLHA__c/fields/ZZRunning_Cable_Hazards_Files__c.field-meta.xml
<CustomField>
    <fullName>ZZRunning_Cable_Hazards_Files__c</fullName>
    <label>ZZRunning Cable Hazards Files</label>
    <type>TextArea</type>
</CustomField>