unpackaged/main/default/objects/FLHA__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Technician__c</columns>
    <columns>Location__c</columns>
    <columns>Electronic_Agreement__c</columns>
    <columns>Date_Completion__c</columns>
    <columns>First_Job__c</columns>
    <columns>Last_Job__c</columns>
    <columns>Incident__c</columns>
    <columns>Incident_Reported_To_Supervisor__c</columns>
    <columns>Service_Appointment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Area_Manager_Read_Only</role>
        <role>Dispatch_Manager</role>
        <role>Dispatch_Team_Leads_Project_Coordinators</role>
        <role>Dispatcher</role>
    </sharedTo>
</ListView>