unpackaged/main/default/objects/FLHA__c/listViews/My_FLHA.listView-meta.xml
<ListView>
    <fullName>My_FLHA</fullName>
    <columns>NAME</columns>
    <columns>Technician__c</columns>
    <columns>Location__c</columns>
    <columns>Electronic_Agreement__c</columns>
    <columns>Date_Completion__c</columns>
    <columns>First_Job__c</columns>
    <columns>Last_Job__c</columns>
    <columns>Incident__c</columns>
    <columns>Incident_Reported_To_Supervisor__c</columns>
    <filterScope>Mine</filterScope>
    <label>My FLHA</label>
</ListView>